# MissclimatePy

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  tmin_imputed.parquet
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  getting_started.md  index.md  mdr_protocol.md
examples/: example_mdr.py  example_minimal.py
paper/: paper.bib  paper.html  paper.md
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/getting_started/: index.html
site/mdr_protocol/: index.html
site/search/: search_index.json
src/missclimatepy/: __init__.py  api.py  evaluate.py  features.py  imputate.py  impute.py  io.py  masking.py  mdr.py  metrics.py  models.py  neighbors.py  prepare.py  quickstart.py  registry.py  requirements.py  spatial.py  viz.py
src/missclimatepy/models/: __init__.py  idw.py  rf.py
tests/: test_basic.py  test_evaluate.py  test_features.py  test_imports.py  test_imputate.py  test_impute.py  test_making.py  test_masking.py  test_metrics.py  test_models.py  test_neighbors.py  test_rf_params.py  test_smoke.py  test_viz.py
