
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missclimatepy"
version = "0.1.0"
description = "Minimal and reproducible local framework for imputing climate time series using only spatial (x,y,z) and calendar (t) features."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Hugo Antonio-Fernández", email = "uiem.haf@gmail.com" }
]
keywords = ["climate", "imputation", "meteorology", "spatio-temporal", "random-forest"]

dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scikit-learn>=1.0",
  "matplotlib>=3.5",
  "tqdm>=4.60"
]

[project.urls]
Homepage = "https://github.com/sasoryhaf91/MissclimatePy"
Repository = "https://github.com/sasoryhaf91/MissclimatePy"
Issues = "https://github.com/sasoryhaf91/MissclimatePy/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "black>=24.0",
  "ruff>=0.6",
  "build>=1.2",
  "twine>=5.0",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["missclimatepy*"]

# Si quieres incluir data adicional en el paquete en el futuro:
# [tool.setuptools.package-data]
# "missclimatepy" = ["py.typed"]

[tool.coverage.run]
branch = true
source = ["missclimatepy"]

[tool.coverage.report]
show_missing = true
skip_covered = true
