
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missclimatepy"
version = "0.1.0"
description = "Fast station-wise imputation/evaluation for daily climate series with K-neighbor training and controlled inclusion."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name="Hugo Antonio Fernández"}]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.0",
  "tqdm>=4.64",
]

[project.urls]
Homepage = "https://github.com/<user>/missclimatepy"
Issues = "https://github.com/<user>/missclimatepy/issues"
