[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missclimatepy"
version = "0.1.1"
description = "Spatial–temporal imputation for daily climate station records using XYZT machine-learning models."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Hugo Antonio-Fernández" },
  { name = "Humberto Vaquera-Huerta" },
  { name = "Moisés Michel Rosengaus-Moshinsky" },
  { name = "Paulino Pérez-Rodríguez" },
  { name = "José Crossa" },
]

license = { file = "LICENSE" }

keywords = [
  "climate",
  "meteorology",
  "climatology",
  "missing-data",
  "imputation",
  "machine-learning",
  "random-forest",
  "XYZT",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.6",
  "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pre-commit",
  "mkdocs",
  "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/sasoryhaf91/missclimatepy"
Repository = "https://github.com/sasoryhaf91/missclimatepy"
"Issue Tracker" = "https://github.com/sasoryhaf91/missclimatepy/issues"
Documentation = "https://sasoryhaf91.github.io/missclimatepy"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
